# datto

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  Makefile  README.md  build.py  datto_examples.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
builddir/: .buildinfo  index.html  modules.html  search.html
builddir/.doctrees/: datto.data.doctree  datto.doctree  environment.pickle  index.doctree
builddir/_modules/datto/: CleanText.html  Eda.html  SetupMethods.html  TrainModel.html
builddir/_sources/: index.rst.txt
data/: all_names
datto/: CleanDataframe.py  CleanText.py  DataConnections.py  Eda.py  Experiments.py  FrontEnd.py  ModelResults.py  Setup.py  SetupMethods.py  TrainModel.py  __init__.py  command_line.py  utils.py
datto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
datto/data/: all_names
docs/source/: conf.py  datto.data.rst  datto.rst  index.rst
dst/: CleanText.py  __init__.py
dst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example_notebooks/: Topic analysis example.ipynb  datto_examples.ipynb
templates/: Exploratory Data Analysis Methods.ipynb  basic_ml_pipeline.py  bug_report_template.md  convert-jupyter-notebook-to-script.txt  convert-python-script-to-jupyter-notebook.txt  feature_request_template.md  github_feature_request_template.md  template-gitignore-file.txt  update-all-the-things.sh
tests/: test_clean_dataframe.py  test_clean_text.py  test_data_connections.py  test_eda.py  test_experiments.py  test_front_end.py  test_model_results.py  test_setup.py  test_setup_methods.py  test_train_model.py
