[tool.poetry]
name = "datto"
version = "0.5.3"
description = "Data Tools (Dat To)"
authors = ["kristiewirth <kristie.ann.wirth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.4"
spacy = "^2.2.4"
s3fs = "^0.4.2"
psycopg2-binary = "^2.8.5"
python-json-logger = "^0.1.11"
sklearn = "^0.0"
xgboost = "^1.1.1"
gensim = "^3.8.3"
hypothesis = "^5.35.2"
lightgbm = "^3.0.0"
catboost = "^0.24.1"
shap = "^0.36.0"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
lime = "^0.2.0"
statsmodels = "^0.12.2"
seaborn = "^0.11.1"
progressbar = "^2.5"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"