[tool.poetry]
name = "datto"
version = "0.8.1"
description = "Data Tools (Dat To)"
authors = ["kristiewirth <kristie.ann.wirth@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.4"
s3fs = "^2021.11.0"
spacy = "^3.2.0"
psycopg2-binary = "^2.9.2"
python-json-logger = "^2.0.2"
xgboost = "^1.5.0"
gensim = "^4.1.2"
hypothesis = "^6.24.5"
lightgbm = "^3.3.1"
catboost = "^1.0.3"
shap = "^0.40.0"
Sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
lime = "^0.2.0"
statsmodels = "^0.13.1"
seaborn = "^0.11.2"
progressbar = "^2.5"
pandas = "^1.3.4"
tabulate = "^0.8.9"
nltk = "^3.6.5"
wheel = "^0.37.0"
nbconvert = "^6.3.0"
black = "^21.11b1"
isort = "^5.10.1"
jupytext = "^1.13.1"
scikit-learn = "^1.0.1"
jupyter-contrib-nbextensions = "^0.5.1"
slack-client = "^0.3.0"
pytest = "^6.2.5"
slack-sdk = "^3.13.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"