[tool.poetry]
name = "datto"
version = "0.8.9"
description = "Data Tools (Dat To)"
authors = ["kristiewirth <kristie.ann.wirth@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "1.23.5"
spacy = "^3.5.1"
psycopg2-binary = "^2.9.5"
python-json-logger = "^2.0.7"
xgboost = "^1.7.4"
gensim = "3.7.3"
hypothesis = "^6.70.0"
catboost = "^1.1.1"
sphinx = {version = "^4.3.0", optional = true}
sphinx-rtd-theme = "^1.2.0"
lime = "^0.2.0"
statsmodels = "^0.13.5"
seaborn = "^0.12.2"
progressbar = "^2.5"
pandas = "^1.5.3"
tabulate = "^0.9.0"
nltk = "^3.8.1"
nbconvert = "^7.2.10"
jupytext = "^1.14.5"
slack-client = "^0.3.0"
pytest = "^7.2.2"
slack-sdk = "^3.20.2"
s3fs = "^2023.3.0"
scikit-learn = "1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx"]